--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="navbar-main">
                 <div class="logo">
-                    <img src="images/logo.jpg" alt="logo" />
+                    <a href="index.html"> <img src="images/logo.jpg" alt="logo" /></a>
                 </div>
                 <div class="button">
                     <ul class="button-container">
