--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -17,7 +17,8 @@
         <nav>
             <div class="navbar-main">
                 <div class="logo">
-                    <img src="images/logo.jpg" alt="logo" />
+                    <a href="index.html"> <img src="images/logo.jpg" alt="logo" /></a>
+
                 </div>
                 <div class="button">
                     <ul class="button-container">
@@ -44,25 +45,26 @@
 
     <main>
         <section>
-            <div class="first-sub-section">
-                <div class="fss-heading-container">
+            <div class="first-section">
+                <div class="first-section-heading-container">
                     <h1>Welcome here, pal</h1>
                 </div>
-                <div class="fss-image-container">
-                    <img src="./images/20.JPG" alt="image" />
-                    <img src="./images/9.JPG" alt="image" />
+                <div class="first-section-image-container">
+                    <img src="./images/15.jpg" alt="image" />
+                    <!-- <img src="./images/9.JPG" alt="image" /> -->
                 </div>
-                <div class="fss-paragraph-container">
+                <div class="first-section-paragraph-container">
                     <h2>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis rerum earum repellat quisquam consectetur ut amet, rem tempora nulla exercitationem perferendis nesciunt, adipisci dicta et dolores labore eius recusandae?
                     </h2>
                 </div>
             </div>
-            <div class="second-sub-section">
-                <div class="sss-content-organizer">
-                    <div class="sss-first-image-desc-container">
-                        <img src="./images/15.jpg" alt="image" />
-                        <div class="sssf-desc-container">
+            <div class="second-section">
+                <div class="second-section-content-organizer">
+                    <div class="second-section-first-image-desc-container">
+                        <img src="./images/20.JPG" alt="image" />
+
+                        <div class="second-section-first-desc-container">
                             <div>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
@@ -71,8 +73,8 @@
                         </div>
 
                     </div>
-                    <div class="sss-second-image-desc-container">
-                        <div class="ssss-desc-container">
+                    <div class="second-section-second-image-desc-container">
+                        <div class="second-section-second-desc-container">
                             <div>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
@@ -82,7 +84,7 @@
                         <img src="./images/3.JPG" alt="image" />
                     </div>
                 </div>
-                <div class="sss-paragraph-container">
+                <div class="second-section-paragraph-container">
                     <h3>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sunt asperiores amet illum inventore ut eos natus vel, similique ducimus minima doloremque neque. Esse necessitatibus consequuntur animi impedit, earum numquam! Lorem ipsum dolor sit amet
                         necessitatibus consequuntur animi impedit, earum numquam!
@@ -90,8 +92,8 @@
                     </h3>
                 </div>
             </div>
-            <div class="third-sub-section">
-                <div class="tss-image-container">
+            <div class="third-section">
+                <div class="third-section-image-container">
                     <div>
                         <img src="./images/6.JPG" alt="image" />
                     </div>
@@ -108,11 +110,11 @@
                 </div>
 
 
-                <div class="tss-image-desc-container">
+                <div class="third-section-image-desc-container">
 
-                    <div class="tss-sub-container">
+                    <div class="third-section-image-desc-sub-container">
                         <img src="./images/21.JPG" alt="image" />
-                        <div class="tss-desc-container">
+                        <div class="third-section-desc-container">
                             <div>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
@@ -131,10 +133,10 @@
         <div class="footer-main">
             <div class="footer-text-container">
                 <div>
-                    <p>Navrhnul a vytvořil David Pitra</p>
+                    <p>Made by David Pitra</p>
                 </div>
                 <div>
-                    <p>© 2022 - <span>Všechna práva vyhrazena</span> </p>
+                    <p>© 2022 - <span>All rights reserved</span> </p>
                 </div>
             </div>
 
