--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>document</title>
+    <title>we capture the moments</title>
+    <link rel="icon" href="images/dp-mini.png">
 </head>
 
 <body>
@@ -17,8 +18,7 @@
         <nav>
             <div class="navbar-main">
                 <div class="logo">
-                    <a href="index.html"> <img src="images/logo.jpg" alt="logo" /></a>
-
+                    <a href="index.html"> <img src="images/dp-big-logo1.png" alt="logo" /></a>
                 </div>
                 <div class="button">
                     <ul class="button-container">
@@ -101,7 +101,7 @@
                         <img src="./images/10.JPG" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/14.jpg" alt="image" />
+                        <img src="./images/13.jpg" alt="image" />
                     </div>
                     <div>
                         <img src="./images/background-about-1.jpg" alt="image" />
