--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -50,12 +50,15 @@
                 </div>
                 <div class="text-container">
                     <div class="box-1">
+                        <h2>Beginings</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-2">
+                        <h2>First idea</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-3">
+                        <h2>What we actually do</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                 </div>
@@ -63,7 +66,7 @@
             <div class="contact-section">
                 <div class="contact-container">
                     <div class="form-heading">
-                        <h2>Place your thought here</h2>
+                        <h2>If you have any thought, <br> leave it here</h2>
                     </div>
                     <div class="form-container">
                         <form>
@@ -79,7 +82,7 @@
 
                                 <li>
                                     <!-- <label>Your Message <span class="required">*</span> </label> -->
-                                    <textarea name="message" class="input-message" placeholder="Abc"></textarea>
+                                    <textarea name="message" class="input-message" placeholder="Abc..."></textarea>
                                 </li>
                                 <!-- <li>
                                      <label>Subject</label><select name="subject" class="input-subject-selector">    
