--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -47,7 +47,7 @@
         <section>
             <div class="first-section">
                 <div class="first-section-heading-container">
-                    <h1>Welcome here, pal</h1>
+                    <h1>Be welcomed, pal</h1>
                 </div>
                 <div class="first-section-image-container">
                     <img src="./images/15.jpg" alt="image" />
