--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/dp-mini.png">
 </head>
 
-<body>
+<body onload="typeWriter()">
     <header>
         <nav>
             <div class="navbar-main">
@@ -50,11 +50,11 @@
                 </div>
                 <div class="text-container">
                     <div class="box-1">
-                        <h2>Beginings</h2>
+                        <h2 id="js1"></h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-2">
-                        <h2>First idea</h2>
+                        <h2>First ideas</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-3">
@@ -66,7 +66,8 @@
             <div class="contact-section">
                 <div class="contact-container">
                     <div class="form-heading">
-                        <h2>If you have any thought, <br> leave it here</h2>
+                        <h2>
+                            If you have any thought, <br> leave it here</h2>
                     </div>
                     <div class="form-container">
                         <form>
@@ -120,7 +121,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <script src="./scripts/index.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
