--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/dp-mini.png">
 </head>
 
-<body>
+<body onload="TypeEffect2()">
     <header>
         <nav>
             <div class="navbar-main">
@@ -46,13 +46,15 @@
     <main>
         <section>
             <div class="first-section">
-                <div class="first-section-heading-container">
-                    <h1>Be welcomed, pal</h1>
+                <div id="helper">
+                    <div class="first-section-heading-container">
+                        <h1 id="js2"></h1>
+                    </div>
+                    <div class="first-section-image-container">
+                        <img src="./images/15.jpg" alt="image" />
+                    </div>
                 </div>
-                <div class="first-section-image-container">
-                    <img src="./images/15.jpg" alt="image" />
-                    <!-- <img src="./images/9.JPG" alt="image" /> -->
-                </div>
+
                 <div class="first-section-paragraph-container">
                     <h2>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis rerum earum repellat quisquam consectetur ut amet, rem tempora nulla exercitationem perferendis nesciunt, adipisci dicta et dolores labore eius recusandae?
