--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/dp-mini.png">
 </head>
 
-<body onload="typeWriter()">
+<body onload="TypeEffect()">
     <header>
         <nav>
             <div class="navbar-main">
@@ -79,6 +79,8 @@
                                 <li>
                                     <!-- <label>Email  <span class="required">*</span> </label> -->
                                     <input type="email" name="email" class="input-email" placeholder="Email" />
+                                    <!-- <p id="nameHolder">Jméno</p>
+                                    <input id="nameInput" type="email" class="input-email" onfocus="HidePlaceholder('nameHolder')" onfocusout="ShowPlaceHolder('nameHolder', 'nameInput')"> -->
                                 </li>
 
                                 <li>
