--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -46,11 +46,11 @@
         <section>
             <div class="about-section">
                 <div class="about-heading-container">
-                    <h1>And there is something about us</h1>
+                    <h1 id="js1"></h1>
                 </div>
                 <div class="text-container">
                     <div class="box-1">
-                        <h2 id="js1"></h2>
+                        <h2>Beginings</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-2">
@@ -60,6 +60,12 @@
                     <div class="box-3">
                         <h2>What we actually do</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                        <ul style="list-style-type:none">
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul>
                     </div>
                 </div>
             </div>
