--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -68,6 +68,7 @@
 
                         <div class="second-section-first-desc-container">
                             <div>
+                                <h4>Lorem ipsum</h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
                                 </p>
@@ -78,6 +79,7 @@
                     <div class="second-section-second-image-desc-container">
                         <div class="second-section-second-desc-container">
                             <div>
+                                <h4>Lorem ipsum</h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
                                 </p>
@@ -118,6 +120,7 @@
                         <img src="./images/21.JPG" alt="image" />
                         <div class="third-section-desc-container">
                             <div>
+                                <h4>Lorem ipsum</h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
                                 </p>
