--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -25,19 +25,11 @@
                         <li><a href="index.html">visit homepage</a></li>
                         <li><a href="about.html">read about us</a></li>
                     </ul>
-                    <div class="action" onclick="actionToggle();">
+                    <!-- <div class="action" onclick="actionToggle();">
                         <span>+</span>
-
-                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
-                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
-                                GitHub</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
-                                Instagram</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
-                                Codepen</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
-                                Linkedin</li> -->
-                    </div>
+                        <li><a href="index.html">visit homepage</a></li>
+                        <li><a href="about.html">read about us</a></li>
+                    </div> -->
                 </div>
             </div>
         </nav>
