--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -26,19 +26,11 @@
                         <li><a href="index.html">visit homepage</a></li>
                         <li><a href="about.html">read about us</a></li>
                     </ul>
-                    <div class="action" onclick="actionToggle();">
+                    <!-- <div class="action" onclick="actionToggle();">
                         <span>+</span>
-
-                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
-                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
-                                GitHub</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
-                                Instagram</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
-                                Codepen</li>
-                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
-                                Linkedin</li> -->
-                    </div>
+                        <li><a href="index.html">visit homepage</a></li>
+                        <li><a href="about.html">read about us</a></li>
+                    </div> -->
                 </div>
             </div>
         </nav>
@@ -55,7 +47,6 @@
                         <img src="./images/15.jpg" alt="image" />
                     </div>
                 </div>
-
                 <div class="first-section-paragraph-container">
                     <h2>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis rerum earum repellat quisquam consectetur ut amet, rem tempora nulla exercitationem perferendis nesciunt, adipisci dicta et dolores labore eius recusandae?
@@ -66,7 +57,6 @@
                 <div class="second-section-content-organizer">
                     <div class="second-section-first-image-desc-container">
                         <img src="./images/20.JPG" alt="image" />
-
                         <div class="second-section-first-desc-container">
                             <div>
                                 <h4>Lorem ipsum</h4>
@@ -75,7 +65,6 @@
                                 </p>
                             </div>
                         </div>
-
                     </div>
                     <div class="second-section-second-image-desc-container">
                         <div class="second-section-second-desc-container">
