--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -51,7 +51,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
                     <div class="box-3">
-                        <h2>What we actually do</h2>
+                        <h2> <span>What</span> <span>we</span> <span>actually</span><span>do</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                         <ul style="list-style-type:none">
                             <li>lorem</li>
