--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main id="about">
         <section>
             <div class="about-section">
                 <div class="about-heading-container">
@@ -46,12 +46,12 @@
                         <h2>Beginings</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
-                    <div class="box-2">
+                    <div class="box-2  reveal active">
                         <h2>First ideas</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                     </div>
-                    <div class="box-3">
-                        <h2> <span>What</span> <span>we</span> <span>actually</span><span>do</span></h2>
+                    <div class="box-3 reveal active">
+                        <h2> <span>What</span> <span>we</span> <span>actually</span> <span>do</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
                         <ul style="list-style-type:none">
                             <li>lorem</li>
@@ -62,13 +62,13 @@
                     </div>
                 </div>
             </div>
-            <div class="contact-section">
+            <div class="contact-section reveal active">
                 <div class="contact-container">
                     <div class="form-heading">
                         <h2>
                             If you have any thought, <br> leave it here</h2>
                     </div>
-                    <div class="form-container">
+                    <div class="form-container reveal active">
                         <form>
                             <ul class="contact-input-container">
                                 <li>
@@ -102,6 +102,14 @@
                                 <button class="button"><span>Submit</span></button>
                             </ul>
                         </form>
+
+
+                        <div class="container">
+                            <p class="textAbove">I am </p>
+                            <p class="typeText"></p>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -119,16 +127,27 @@
             </div>
         </div>
     </footer>
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <script src="./scripts/index.js"></script>
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+    <script>
+        window.addEventListener('scroll', reveal);
+
+        function reveal() {
+            var reveals = document.querySelectorAll('.reveal');
+
+            for (var i = 0; i < reveals.length; i++) {
+                var windowHeight = window.innerHeight;
+                var revealTop = reveals[i].getBoundingClientRect().top;
+                var revealPoint = 150;
+
+                if (revealTop < windowHeight - revealPoint) {
+                    reveals[i].classList.add('active');
+                } else {
+                    reveals[i].classList.remove('active');
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
