--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -39,7 +39,16 @@
         <section>
             <div class="about-section">
                 <div class="about-heading-container">
-                    <h1 id="js1"></h1>
+                    <!-- <h1 id="js1"></h1> -->
+
+
+                    <!-- <h1 class="typeText"></h1> -->
+
+                    <div id="heading">
+                        <span>a</span><span>n</span><span>d</span><span> </span><span>s</span><span>o</span><span>m</span><span>e</span><span>t</span><span>h</span><span>i</span><span>n</span><span>g</span><span> </span><span>a</span><span>b</span><span>o</span><span>u</span><span>t</span><span> </span><span>u</span><span>s</span></div>
+
+
+
                 </div>
                 <div class="text-container">
                     <div class="box-1">
@@ -65,8 +74,9 @@
             <div class="contact-section reveal active">
                 <div class="contact-container">
                     <div class="form-heading">
-                        <h2>
-                            If you have any thought, <br> leave it here</h2>
+
+                        <h2>If you have any thought, <br>leave it here </h2>
+
                     </div>
                     <div class="form-container reveal active">
                         <form>
@@ -104,10 +114,7 @@
                         </form>
 
 
-                        <div class="container">
-                            <p class="textAbove">I am </p>
-                            <p class="typeText"></p>
-                        </div>
+
 
 
                     </div>
