--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -100,15 +100,21 @@
                     <div>
                         <img src="./images/background-about-1.jpg" alt="image" />
                     </div>
+                    <div>
+                        <img src="./images/31.jpg" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/32.jpg" alt=" image " />
+                    </div>
 
                 </div>
 
 
-                <div class="third-section-image-desc-container">
+                <div class="third-section-image-desc-container ">
 
-                    <div class="third-section-image-desc-sub-container reveal action">
-                        <img src="./images/21.JPG" alt="image" />
-                        <div class="third-section-desc-container">
+                    <div class="third-section-image-desc-sub-container reveal action ">
+                        <img src="./images/21.JPG " alt="image " />
+                        <div class="third-section-desc-container ">
                             <div>
                                 <h4>Lorem ipsum</h4>
                                 <p>
@@ -125,8 +131,8 @@
     </main>
 
     <footer>
-        <div class="footer-main">
-            <div class="footer-text-container">
+        <div class="footer-main ">
+            <div class="footer-text-container ">
                 <div>
                     <p>Made by David Pitra</p>
                 </div>
@@ -137,7 +143,7 @@
 
         </div>
     </footer>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js "></script>
     <script>
         window.addEventListener('scroll', reveal);
 
