--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -22,10 +22,12 @@
                     <a href="index.html"> <img id="respon-img-mini" src="images/dp-mini-logo.png" alt="logo" /></a>
                 </div>
                 <div class="button">
-                    <ul class="button-container">
-                        <li><a href="index.html">visit homepage</a></li>
-                        <li><a href="about.html">read about us</a></li>
-                    </ul>
+                    <div class="button-container">
+                        <ul>
+                            <li><a href="index.html">visit homepage</a></li>
+                            <li><a href="about.html">read about us</a></li>
+                        </ul>
+                    </div>
                     <!-- <div class="action" onclick="actionToggle();">
                         <span>+</span>
                         <li><a href="index.html">visit homepage</a></li>
