--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>who we are</title>
@@ -85,37 +85,20 @@
                                     <input type="text" name="name-first" class="name-input" placeholder="First name" />
                                     <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
                                 <li>
-                                    <!-- <label>Email  <span class="required">*</span> </label> -->
-                                    <input type="email" name="email" class="input-email" placeholder="Email" />
-                                    <!-- <p id="nameHolder">Jméno</p>
+                                    < <input type="email" name="email" class="input-email" placeholder="Email" />
+
                                     <input id="nameInput" type="email" class="input-email" onfocus="HidePlaceholder('nameHolder')" onfocusout="ShowPlaceHolder('nameHolder', 'nameInput')"> -->
                                 </li>
 
                                 <li>
-                                    <!-- <label>Your Message <span class="required">*</span> </label> -->
+
                                     <textarea name="message" class="input-message" placeholder="Abc..."></textarea>
                                 </li>
-                                <!-- <li>
-                                     <label>Subject</label><select name="subject" class="input-subject-selector">    
-                                        <optgroup label="Choose email subject">
-                                            <option value="Question">Question</option>
-                                            <option value="Report">Bug Report</option>
-                                            <option value="Partnership">Partnership</option>
-                                            <option value="Other">Other</option>
-                                        </optgroup>                            
-                                        
-                                        </select>
-                                </li>  -->
-                                <!-- <button>Submit form</button>  style="vertical-align:middle"-->
+
 
                                 <button class="button"><span>Submit</span></button>
                             </ul>
                         </form>
-
-
-
-
-
                     </div>
                 </div>
             </div>
