--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/dp-mini.png">
 </head>
 
-<body onload="TypeEffect()">
+<body>
     <header>
         <nav>
             <div class="navbar-main">
