--- a/individual-work/wba-projekt-2/about.html
+++ b/individual-work/wba-projekt-2/about.html
@@ -85,18 +85,13 @@
                                     <input type="text" name="name-first" class="name-input" placeholder="First name" />
                                     <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
                                 <li>
-                                    < <input type="email" name="email" class="input-email" placeholder="Email" />
-
-                                    <input id="nameInput" type="email" class="input-email" onfocus="HidePlaceholder('nameHolder')" onfocusout="ShowPlaceHolder('nameHolder', 'nameInput')"> -->
+                                    <input type="email" name="email" class="input-email" placeholder="Email" />
                                 </li>
-
                                 <li>
-
                                     <textarea name="message" class="input-message" placeholder="Abc..."></textarea>
                                 </li>
-
-
                                 <button class="button"><span>Submit</span></button>
+                                <!-- <input id="nameInput" type="email" class="input-email" onfocus="HidePlaceholder('nameHolder')" onfocusout="ShowPlaceHolder('nameHolder', 'nameInput')"> -->
                             </ul>
                         </form>
                     </div>
