--- a/21-04-22/index.html
+++ b/21-04-22/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body style="background-color: bisque;">
+    <button onclick="h1Click()">ahoj</button>
 
-    <script src="index.js"></script>
+    <h1>text z html</h1>
+    <p>jojo</p>
+
 </body>
 
 </html>
