--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -48,7 +48,7 @@
                         <h1 id="js2"></h1>
                     </div>
                     <div class="first-section-image-container">
-                        <img src="./images/15.jpg" alt="image" />
+                        <img src="./images/macos-sierra.jpg" alt="image" />
                     </div>
                 </div>
                 <div class="first-section-paragraph-container">
@@ -60,7 +60,7 @@
             <div class="second-section">
                 <div class="second-section-content-organizer">
                     <div class="second-section-first-image-desc-container reveal action">
-                        <img src="./images/20.JPG" alt="image" />
+                        <img src="./images/sunny-flower-shadow.JPG" alt="image" />
                         <div class="second-section-first-desc-container">
                             <div>
                                 <h4>Lorem ipsum</h4>
@@ -79,7 +79,7 @@
                                 </p>
                             </div>
                         </div>
-                        <img src="./images/3.JPG" alt="image" />
+                        <img src="./images/indian-style-shadow-tree.JPG" alt="image" />
                     </div>
                 </div>
                 <div class="second-section-paragraph-container reveal action">
@@ -93,22 +93,22 @@
             <div class="third-section">
                 <div class="third-section-image-container reveal action">
                     <div>
-                        <img src="./images/6.JPG" alt="image" />
+                        <img src="./images/lion-profile-photo.jpg" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/10.JPG" alt="image" />
+                        <img src="./images/sunrise-cukrak-antenna.JPG" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/13.jpg" alt="image" />
+                        <img src="./images/night-bridge-long-expo.jpg" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/background-about-1.jpg" alt="image" />
+                        <img src="./images/sunny-forest-stick.JPG" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/31.jpg" alt="image" />
+                        <img src="./images/big-angry-cat.jpg" alt="image" />
                     </div>
                     <div>
-                        <img src="./images/32.jpg" alt=" image " />
+                        <img src="./images/shanghai.jpg" alt=" image " />
                     </div>
 
                 </div>
@@ -117,7 +117,7 @@
                 <div class="third-section-image-desc-container ">
 
                     <div class="third-section-image-desc-sub-container reveal action ">
-                        <img src="./images/21.JPG " alt="image " />
+                        <img src="./images/12.jpg" alt="image " />
                         <div class="third-section-desc-container ">
                             <div>
                                 <h4>Lorem ipsum</h4>
