--- a/individual-work/wba-projekt-2/index.html
+++ b/individual-work/wba-projekt-2/index.html
@@ -18,8 +18,8 @@
         <nav>
             <div class="navbar-main">
                 <div class="logo">
-                    <a href="index.html"> <img id="respon-img-big" src="images/dp-big-logo1.png" alt="logo" /></a>
-                    <a href="index.html"> <img id="respon-img-mini" src="images/dp-mini-logo.png" alt="logo" /></a>
+                    <a href="index.html"> <img id="respon-img-big" src="images/logos/dp-big-logo1.png" alt="logo" /></a>
+                    <a href="index.html"> <img id="respon-img-mini" src="images/logos/dp-mini-logo.png" alt="logo" /></a>
                 </div>
                 <div class="button">
                     <div class="button-container">
