--- a/individual-work/dvop-web/index.html
+++ b/individual-work/dvop-web/index.html
@@ -130,7 +130,7 @@
                     <p>Made by David Pitra</p>
                 </div>
                 <div>
-                    <p>© 2022 - <span>All rights reserved</span> </p>
+                    <p>© 2022 - <a href="https://www.zakonyprolidi.cz/cs/2000-121">All rights reserved</a></p>
                 </div>
             </div>
         </div>
